# metamod-source

./: .gitignore  CMakeLists.txt  README.md  configure.cmake
cmake/: ConfigureMetaMod.cmake  configure.cmake.in
cmake/Source1/: ConfigureCompileOption.cmake  ConfigureSpecificEngine.cmake  DetectSDK.cmake
cmake/Source1/Impl/: ImplementSpecificConfiguration.cmake
cmake/Source1/Impl/CSGO/: CSGO.cmake
core/: CMakeLists.txt  ISmmPluginExt.h  gamedll_bridge.cpp  metamod.cpp  metamod_console.cpp  metamod_gamedllinterace.h  metamod_oslink.cpp  metamod_oslink.h  metamod_plugins.cpp  metamod_plugins.h  metamod_util.cpp  vsp_bridge.cpp
core/provider/: console.cpp  console.h  provider_ep2.cpp
loader/: CMakeLists.txt  README.md  gamedll.cpp  loader.cpp  loader.h  utility.cpp
public/: IMetaMod.h  metamod_interface.h  metamod_oslink.h  metamod_sharedef.h  metamod_utility.h  metamod_version.h  mm_sharedef.h  mm_utility.h
public/sourcehook/: FastDelegate.h  sh_memfuncinfo.h  sh_memory.h  sh_pagealloc.h  sh_stack.h  sourcehook.cpp  sourcehook.h  sourcehook_hookmangen.cpp  sourcehook_impl.h  sourcehook_impl_chookidman.cpp  sourcehook_impl_chookidman.h  sourcehook_impl_chookmaninfo.cpp  sourcehook_impl_chookmaninfo.h  sourcehook_impl_ciface.h  sourcehook_impl_cvfnptr.cpp  sourcehook_impl_cvfnptr.h  sourcehook_pibuilder.h
public/sourcehook/generate/: sourcehook.hxx
